--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         </div>
 
         <div class="banner">
-            <img src="images/ilustaracije/hero.png" class="animation">
+            <img src="images/ilustaracije/hero.png" alt="hero" class="animation">
         </div>
     </div>
 </section>
@@ -63,7 +63,7 @@
 <section class="about" id="about">
     <div class="container">
         <div class="banner">
-            <img src="images/ilustaracije/about.png" class="w-100 animation">
+            <img src="images/ilustaracije/about.png" alt="about" class="w-100 animation">
         </div>
   
         <div class="content">
@@ -84,6 +84,8 @@
 
 <section class="usluge" id="usluge">
     <h2 class="naslov underline">Usluge</h2>
+    <p class="naslov-tekst">Nudimo širok spektar usluga digitalnog marketinga i web dizajna prilagođenih vašim potrebama.</p>
+
     <div class="container">
 
         <div class="card">
@@ -145,6 +147,8 @@
 
 <section class="radovi" id="radovi">
     <h2 class="naslov underline">Naši radovi</h2>
+    <p class="kraci-tekst">Pogledajte neke od naših najnovijih projekata koji govore više od reči.</p>
+
     <div class="video-wrapper">
         <button class="video-nav-left" id="prevVideo">
             <ion-icon name="chevron-back-outline"></ion-icon>
@@ -287,6 +291,7 @@
 
 <section class="testimonial" id="testimonial">
     <h2 class="naslov underline">Reči klijenata</h2>
+    <p class="naslov-tekst">Iskustva naših klijenata su nam najvažnija. Uverite se sami kako CM Agency pravi pravu razliku.</p>
 
     <div class="container">
     <button class="testimonial-nav-left" id="prevTestimonial">
@@ -358,9 +363,11 @@
 
 <section class="contact-form" id="kontakt">
     <h2 class="naslov underline">Kontaktiraj nas</h2>
+    <p class="kraci-tekst">Javite nam se i zajedno ćemo pronaći najbolje rešenje za vaš digitalni uspeh.</p>
+
     <div class="container">
 
-    <form>
+    <form autocomplete="on">
         <div class="row">
             <div class="form-group">
                 <label for="ime">Vaše ime i prezime</label>
@@ -415,13 +422,15 @@
 
 <section class="blog" id="blog">
     <h2 class="naslov underline">Naš Blog & Novosti</h2>
+    <p class="kraci-tekst">Pratite naše najnovije savete, vesti i zanimljivosti iz našeg sveta.</p>
+
     <div class="container">
 
     <div class="blog-list">
 
         <div class="blog-card">
             <div class="banner">
-                <a href="postovi.html?id=1"><img src="images/blog/launching.png" id="post-image"></a>
+                <a href="postovi.html?id=1"><img src="images/blog/launching.png" id="post-image" alt="post1"></a>
             </div>
 
             <div class="content">
@@ -442,7 +451,7 @@
       
         <div class="blog-card">
             <div class="banner">
-                <a href="postovi.html?id=2"><img src="images/blog/contact.png" id="post-image"></a>
+                <a href="postovi.html?id=2"><img src="images/blog/contact.png" id="post-image" alt="post2"></a>
             </div>
 
             <div class="content">
@@ -463,7 +472,7 @@
 
         <div class="blog-card">
             <div class="banner">
-                <a href="postovi.html?id=3"><img src="images/blog/follow_ig.png" id="post-image"></a>
+                <a href="postovi.html?id=3"><img src="images/blog/follow_ig.png" id="post-image" alt="post3"></a>
             </div>
 
             <div class="content">
@@ -484,7 +493,7 @@
 
         <div class="blog-card">
             <div class="banner">
-                <a href="postovi.html?id=4"><img src="images/blog/follow_tt.png" id="post-image"></a>
+                <a href="postovi.html?id=4"><img src="images/blog/follow_tt.png" id="post-image" alt="post4"></a>
             </div>
 
             <div class="content">
@@ -506,6 +515,7 @@
     </div>
     <a href="postovi.html"><button class="btn" id="view">Pogledaj više</button></a>
 </section>
+
 <!--
 <section class="features" id="features">
     <h2 class="naslov underline">Our Features</h2>
@@ -530,7 +540,7 @@
     </div>
 
     <div class="banner">
-      <img src="images/ilustracije/features.png" class="w-100 animation">
+      <img src="images/ilustracije/features.png" alt="features" class="w-100 animation">
     </div>
 
     <div class="list">
@@ -554,23 +564,24 @@
     </div>
 </section>
 -->
+
 <section class="footer">
     <div class="footer-top">
     <div class="container">
 
         <div class="footer-logo">
-            <a href="#" class="logo"><img src="images/logo.png">CM Agency</a>
-            <p>Helping businesses grow through web design, development, and digital marketing.</p>
+            <a href="#" class="logo"><img src="images/logo.png" alt="logo">CM Agency</a>
+            <p>Pomažemo preduzećima da rastu kroz veb dizajn, razvoj i digitalni marketing.</p>
             <div class="social-icons">
                 <a href="https://instagram.com/cmagency.marketing">
                     <ion-icon name="logo-instagram"></ion-icon></a>
-                <a href="#"><ion-icon name="logo-facebook"></ion-icon></a>
-                <a href="#"><ion-icon name="logo-tiktok"></ion-icon></a>
+                <a href="https://tiktok.com/@cmagency.marketing">
+                    <ion-icon name="logo-tiktok"></ion-icon></a>
             </div>
         </div>
 
         <div class="column">
-            <h4>Osnovni linkovi</h4>
+            <h4>Glavni linkovi</h4>
             <ul>
                 <li><a href="#about">O nama</a></li>
                 <li><a href="#usluge">Usluge</a></li>
@@ -581,7 +592,7 @@
         </div>
 
         <div class="column">
-            <h4>Quick Links</h4>
+            <h4>Dodatni linkovi</h4>
             <ul>
                 <li><a href="faq.html">FAQ</a></li>
                 <li><a href="posao.html">Posao</a></li>
@@ -591,11 +602,11 @@
         </div>
 
         <div class="contact">
-            <h4>Contact Us</h4>
+            <h4>Kontaktiraj nas</h4>
             <a href="mailto: lukamax96@gmail.com"><ion-icon name="mail"></ion-icon> lukamax96@gmail.com</a>
             <a href="mailto: lukamaxx96@gmail.com"><ion-icon name="mail"></ion-icon> lukamaxx96@gmail.com</a>
             <a href="mailto: contact@milanwebportal.com"><ion-icon name="mail"></ion-icon> contact@milanwebportal.com</a>
-            <p><ion-icon name="time"></ion-icon> Mon - Sun: 09h - 23h</p>
+            <p><ion-icon name="time"></ion-icon> Svakim danom: 09h - 23h</p>
         </div>
         </div>
     </div>
