--- a/index.html
+++ b/index.html
@@ -186,8 +186,8 @@
 
         <div class="video-card">
             <span class="video-title">@kiroprakticno</span>
-            <a href="https://instagram.com/reel/DHVz8j5xMXY" target="_blank">
-            <video src="images/radovi/kiroprakticno_zglobovi.mp4" muted loop playsinline></video>
+            <a href="https://www.instagram.com/reel/DNAthLKtwj2" target="_blank">
+            <video src="images/radovi/kiroprakticno_za_odrasle.mp4" muted loop playsinline></video>
             <div class="video-loader"></div>
             </a>
             <button class="pause-btn" onclick="togglePlay(this)">
