--- a/index.html
+++ b/index.html
@@ -366,57 +366,58 @@
     <p class="kraci-tekst">Javite nam se i zajedno ćemo pronaći najbolje rešenje za vaš digitalni uspeh.</p>
 
     <div class="container">
-
-    <form autocomplete="on">
-        <div class="row">
-            <div class="form-group">
-                <label for="ime">Vaše ime i prezime</label>
-                <input type="text" id="ime" placeholder="Filip Filipovic">
-            </div>
-            <div class="form-group">
-                <label for="naziv">Naziv kompanije</label>
-                <input type="text" id="naziv" placeholder="Google, Youtube..">
-            </div>
-            <div class="form-group">
-                <label for="email">Vaša e-mail adresa</label>
-                <input type="email" id="email" placeholder="vasa@kompanija.com">
-            </div>
-        </div>
-
-        <div class="row">
-            <div class="form-group">
-                <label for="websajt">Vaš vebsajt</label>
-                <input type="text" id="websajt" placeholder="Ukoliko imate vebsajt, nije obavezno">
-            </div>
-            <div class="form-group">
-                <label for="telefon">Kontakt telefon</label>
-                <input type="text" id="telefon" placeholder="+381 60 123 45 67">
-            </div>
-            <div class="form-group">
-                <label for="budzet">Koji je Vaš budžet za projekat?</label>
-                <input type="text" id="budzet" placeholder="500$, 1000$, 5000$...">
-            </div>
-        </div>
-
+    <form>
+        
+    <div class="row">
         <div class="form-group">
-            <label>Koje usluge su Vam potrebne? Možete izabrati više usluga</label>
-            <div class="radio-group">
-                <label><input type="checkbox" name="usluge"> Short Form Produkcija</label>
-                <label><input type="checkbox" name="usluge"> Izrada web-sajta</label>
-                <label><input type="checkbox" name="usluge"> Editovanje video zapise</label>
-                <label><input type="checkbox" name="usluge"> Vođenje društvenih mreža</label>
-                <label><input type="checkbox" name="usluge"> Facebook & Instagram reklamiranje</label>
-                <label><input type="checkbox" name="usluge"> Profesionalno fotografisanje i snimanje</label>
-            </div>
+            <label for="ime">Vaše ime i prezime</label>
+            <input type="text" id="ime" name="ime" placeholder="Filip Filipovic" autocomplete="name">
         </div>
-
         <div class="form-group">
-            <label for="opis">Objasnite nam ukratko kakav Vam projekat treba i osnovne informacije</label>
-            <textarea id="opis" placeholder="Potrebno nam je reklamiranje naših proizvoda putem Facebook reklama..."></textarea>
+            <label for="naziv">Naziv kompanije</label>
+            <input type="text" id="naziv" name="naziv" placeholder="Google, Youtube.." autocomplete="organization">
         </div>
+        <div class="form-group">
+            <label for="email">Vaša e-mail adresa</label>
+            <input type="email" id="email" name="email" placeholder="vasa@kompanija.com" autocomplete="email">
+        </div>
+    </div>
 
-        <button type="submit">Pošaljite upit</button>
+    <div class="row">
+        <div class="form-group">
+            <label for="websajt">Vaš vebsajt</label>
+            <input type="url" id="websajt" name="websajt" placeholder="Ukoliko imate vebsajt, nije obavezno" autocomplete="url">
+        </div>
+        <div class="form-group">
+            <label for="telefon">Kontakt telefon</label>
+            <input type="tel" id="telefon" name="telefon" placeholder="+381 60 123 45 67" autocomplete="tel">
+        </div>
+        <div class="form-group">
+            <label for="budzet">Koji je Vaš budžet za projekat?</label>
+            <input type="text" id="budzet" name="budzet" placeholder="500$, 1000$, 5000$..." autocomplete="off">
+        </div>
+    </div>
+
+    <div class="form-group">
+        <legend>Koje usluge su Vam potrebne? Možete izabrati više usluga</legend>
+        <div class="radio-group">
+            <label><input type="checkbox" name="usluge[]" value="short-form"> Short Form Produkcija</label>
+            <label><input type="checkbox" name="usluge[]" value="web"> Izrada web-sajta</label>
+            <label><input type="checkbox" name="usluge[]" value="editovanje"> Editovanje video zapisa</label>
+            <label><input type="checkbox" name="usluge[]" value="drustvene-mreze"> Vođenje društvenih mreža</label>
+            <label><input type="checkbox" name="usluge[]" value="reklamiranje"> Facebook & Instagram reklamiranje</label>
+            <label><input type="checkbox" name="usluge[]" value="foto-video"> Profesionalno fotografisanje i snimanje</label>
+        </div>
+    </div>
+
+    <div class="form-group">
+        <label for="opis">Objasnite nam ukratko kakav projekat Vam treba i osnovne informacije</label>
+        <textarea id="opis" name="opis" placeholder="Potrebno nam je reklamiranje naših proizvoda putem Instagram reklama..." autocomplete="off"></textarea>
+    </div>
+
+    <button type="submit">Pošaljite upit</button>
     </form>
+
     </div>
 </section>
 
@@ -625,5 +626,5 @@
 </html>
 
 <script src="main.js"></script>
-<script type="module" src="https://cdn.jsdelivr.net/npm/ionicons@latest/dist/ionicons/ionicons.esm.js"></script>
-<script nomodule src="https://cdn.jsdelivr.net/npm/ionicons@latest/dist/ionicons/ionicons.js"></script>
+<script type="module" src="https://unpkg.com/ionicons@7.2.2/dist/ionicons/ionicons.esm.js"></script>
+<script nomodule src="https://unpkg.com/ionicons@7.2.2/dist/ionicons/ionicons.js"></script>
