Optimize section radovi

--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
         <div class="video-card">
             <span class="video-title">@maskote_lazarevac</span>
             <a href="https://instagram.com/reel/DFXT-Dqs1rf" target="_blank">
-            <video src="images/radovi/maskote.mp4" muted loop></video>
+            <video data-src="images/radovi/maskote.mp4" muted loop playsinline preload="none"></video>
             <div class="video-loader"></div>
             </a> 
             <button class="pause-btn" onclick="togglePlay(this)">
@@ -173,7 +173,7 @@
         <div class="video-card">
             <span class="video-title">@cmagency.marketing</span>
             <a href="https://instagram.com/reel/DFQh-Oqts6F" target="_blank">
-                <video src="images/radovi/agency.mp4" muted loop playsinline></video>
+                <video data-src="images/radovi/agency.mp4" muted loop playsinline preload="none"></video>
                 <div class="video-loader"></div>
             </a>
             <button class="pause-btn" onclick="togglePlay(this)">
@@ -187,7 +187,7 @@
         <div class="video-card">
             <span class="video-title">@kiroprakticno</span>
             <a href="https://www.instagram.com/reel/DNAthLKtwj2" target="_blank">
-            <video src="images/radovi/kiroprakticno_za_odrasle.mp4" muted loop playsinline></video>
+            <video data-src="images/radovi/kiroprakticno_za_odrasle.mp4" muted loop playsinline preload="none"></video>
             <div class="video-loader"></div>
             </a>
             <button class="pause-btn" onclick="togglePlay(this)">
@@ -199,9 +199,9 @@
         </div>
 
         <div class="video-card">
-            <span class="video-title">@lukaxcvetkovic</span>
-            <a href="https://instagram.com/reel/C3DW0c9tzpS" target="_blank">
-            <video src="images/radovi/tutz_brix.mp4" muted loop playsinline></video>
+            <span class="video-title">@maskote_lazarevac</span>
+            <a href="https://instagram.com/reel/DH51Lfuoh1l/" target="_blank">
+            <video data-src="images/radovi/patrolne_sape.mp4" muted loop playsinline preload="none"></video>
             <div class="video-loader"></div>
             </a>
             <button class="pause-btn" onclick="togglePlay(this)">
@@ -213,74 +213,13 @@
         </div>
 
         <div class="video-card">
-            <span class="video-title">@kiroprakticno</span>
-            <a href="https://instagram.com/reel/DHinZOPMQQf/" target="_blank">
-            <video src="images/radovi/kiroprakticno_noga.mp4" muted loop playsinline></video>
+            <video data-src="images/radovi/uskoro.mp4" muted loop playsinline preload="none"></video>
             <div class="video-loader"></div>
-            </a>
             <button class="pause-btn" onclick="togglePlay(this)">
                 <ion-icon name="pause-outline"></ion-icon>
-            </button>
-            <button class="mute-btn" onclick="toggleMute(this)">
-                <ion-icon name="volume-mute-outline"></ion-icon>
             </button>
         </div>
 
-        <div class="video-card">
-            <span class="video-title">@kiroprakticno</span>
-            <a href="https://instagram.com/reel/DHgmsH0MUOm/" target="_blank">
-            <video src="images/radovi/kiroprakticno_kicma.mp4" muted loop playsinline></video>
-            <div class="video-loader"></div>
-            </a>
-            <button class="pause-btn" onclick="togglePlay(this)">
-                <ion-icon name="pause-outline"></ion-icon>
-            </button>
-            <button class="mute-btn" onclick="toggleMute(this)">
-                <ion-icon name="volume-mute-outline"></ion-icon>
-            </button>
-        </div>
-
-        <div class="video-card">
-            <span class="video-title">@kiroprakticno</span>
-            <a href="https://instagram.com/reel/DHYwbW9MjKm/" target="_blank">
-            <video src="images/radovi/kiroprakticno_spavanje.mp4" muted loop playsinline></video>
-            <div class="video-loader"></div>
-            </a>
-            <button class="pause-btn" onclick="togglePlay(this)">
-                <ion-icon name="pause-outline"></ion-icon>
-            </button>
-            <button class="mute-btn" onclick="toggleMute(this)">
-                <ion-icon name="volume-mute-outline"></ion-icon>
-            </button>
-        </div>
-
-        <div class="video-card">
-            <span class="video-title">@kiroprakticno</span>
-            <a href="https://instagram.com/reel/DHVz8j5xMXY/" target="_blank">
-            <video src="images/radovi/kiroprakticno_zglobovi.mp4" muted loop playsinline></video>
-            <div class="video-loader"></div>
-            </a>
-            <button class="pause-btn" onclick="togglePlay(this)">
-                <ion-icon name="pause-outline"></ion-icon>
-            </button>
-            <button class="mute-btn" onclick="toggleMute(this)">
-                <ion-icon name="volume-mute-outline"></ion-icon>
-            </button>
-        </div>
-
-        <div class="video-card">
-            <span class="video-title">@lukaxcvetkovic</span>
-            <a href="https://www.instagram.com/reel/C3lFASENYXZ/" target="_blank">
-            <video src="images/radovi/tutz_patch.mp4" muted loop playsinline></video>
-            <div class="video-loader"></div>
-            </a>
-            <button class="pause-btn" onclick="togglePlay(this)">
-                <ion-icon name="pause-outline"></ion-icon>
-            </button>
-            <button class="mute-btn" onclick="toggleMute(this)">
-                <ion-icon name="volume-mute-outline"></ion-icon>
-            </button>
-        </div>
     </div>
 
     <button class="video-nav-right" id="nextVideo">
